# usp_zephyr

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  LICENSES.txt  README.md  usp_zephyr_workspace.code-workspace  west.yml
boards/seeed/xiao_nrf54l15/: board.cmake  seeed_xiao_connector.dtsi
boards/seeed/xiao_nrf54l15/support/: 99-xiao-nrf54l15.rules  openocd.cfg
boards/shields/semtech_loraplus_expansion_board/: Kconfig.shield  semtech_loraplus_expansion_board.overlay
boards/shields/semtech_lr11xxmb1xxs/: semtech_lr11xxmb1xxs_common.dtsi
boards/shields/semtech_lr2021wio/: Kconfig.shield  semtech_lr2021wio.overlay
boards/shields/semtech_lr20xxmb1xxs/: Kconfig.shield  semtech_lr2021mb1xxs.overlay
boards/shields/semtech_mbed_wio_interface/: Kconfig.shield  semtech_mbed_wio_interface.overlay
boards/shields/semtech_nrf54l15dk_mbed_interface/: Kconfig.shield  semtech_nrf54l15dk_mbed_interface.overlay
boards/shields/semtech_sx126xmb2xxs/: semtech_sx126xmb1xxs_common.dtsi  semtech_sx126xmb2xxs_common.dtsi
boards/shields/semtech_wio_lr20xx/: Kconfig.shield  semtech_wio_lr2021.overlay  semtech_wio_lr2022.overlay  semtech_wio_lr20xx_common.dtsi
doc/: KNOWN_LIMITATIONS.md  THREAD_MANAGEMENT.md  USP_Architecture.md  usp_zephyr_lbm_porting_guide.md  usp_zephyr_porting_guide.md
drivers/: CMakeLists.txt  Kconfig
drivers/usp/: CMakeLists.txt  Kconfig  Kconfig.lr20xx
drivers/usp/lr11xx/: lr11xx_board.c  lr11xx_hal.c  lr11xx_hal_context.h  lr11xx_ral_bsp.c  lr11xx_ral_bsp_calibration.c
drivers/usp/lr20xx/: lr20xx_board.c  lr20xx_ral_bsp_calibration.c
drivers/usp/sx126x/: sx126x_board.c  sx126x_hal.c  sx126x_hal_context.h  sx126x_ral_bsp.c
dts/bindings/gpio/: semtech,mbed-wio-interface.yaml
dts/bindings/usp/: semtech,lr11xx-common.yaml  semtech,lr2021.yaml  semtech,lr2022.yaml  semtech,lr20xx-common.yaml  semtech,lr20xx-dios.yaml  semtech,sx126x-new-common.yaml
include/zephyr/dt-bindings/usp/: lr11xx.h  sx126x.h
include/zephyr/lorawan_lbm/: lorawan_hal_init.h
include/zephyr/usp/: lora_lbm_transceiver.h  smtc_hal_dbg_trace.h  smtc_sw_platform_helper.h  smtc_zephyr_usp_api.h
modules/: Kconfig
modules/lora_basics_modem/: CMakeLists.txt  common.cmake  regions.cmake  relay.cmake
modules/smtc_modem_hal/: smtc_modem_hal.c  smtc_modem_hal_dbg_trace.c  smtc_modem_hal_dbg_trace.h  smtc_modem_hal_storage.c
modules/usp/: CMakeLists.txt  Kconfig  common.cmake
modules/usp_drivers/: dev_env.cmake  lr11xx.cmake  lr20xx.cmake  sx126x.cmake
samples/usp/: README.md
samples/usp/lbm/geolocation/: CMakeLists.txt  README.md  prj.conf
samples/usp/lbm/lctt_certif/: CMakeLists.txt  README.md  prj.conf  prj_nucleo.conf
samples/usp/lbm/periodical_uplink/: CMakeLists.txt  README.md  prj.conf  prj_lowpower.conf
samples/usp/lbm/porting_tests/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/usp/rac/cad/: CMakeLists.txt  README.md  prj.conf  prj_lowpower.conf
samples/usp/rac/cad/src/: main.c
samples/usp/rac/direct_driver_access/: CMakeLists.txt  README.md  prj.conf
samples/usp/rac/direct_driver_access/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_l476rg.overlay  nucleo_u575zi_q.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/rac/direct_driver_access/src/: main.c
samples/usp/rac/hw_modem/: CMakeLists.txt  README.md  prj.conf  prj_nucleol476rg.conf
samples/usp/rac/hw_modem/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_l476rg.conf  nucleo_l476rg.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/rac/hw_modem/python_test/: NHM_PROTOCOL_README.md  PING_PONG_SETUP.md  QUICK_TEST.md  QUICK_TEST_GUIDE.md  README.md  rac_modem_api.py  test_hw_modem.py  test_ping_pong.py
samples/usp/rac/hw_modem/serialization/helpers/: rac_context_converter.c  rac_context_converter.h
samples/usp/rac/hw_modem/src/: CMakeLists.txt  cmd_parser.c  cmd_parser.h  geoloc_bsp.c  git_version.c  git_version.h  hw_modem.c  hw_modem.h  main.c
samples/usp/rac/multiprotocol/: CMakeLists.txt  README.md  prj.conf
samples/usp/rac/multiprotocol/boards/: nucleo_l476rg.overlay  nucleo_u575zi_q.overlay
samples/usp/rac/multiprotocol/src/: main.c
samples/usp/sdk/lrfhss/: CMakeLists.txt  README.md  prj.conf
samples/usp/sdk/lrfhss/boards/: nrf52840dk_nrf52840.overlay
samples/usp/sdk/lrfhss/src/: main.c
samples/usp/sdk/packet_error_rate_flrc/: CMakeLists.txt  README.md
samples/usp/sdk/packet_error_rate_flrc/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/sdk/packet_error_rate_flrc/src/: main.c
samples/usp/sdk/packet_error_rate_fsk/: CMakeLists.txt  README.md  prj.conf
samples/usp/sdk/packet_error_rate_lora/: CMakeLists.txt  README.md  prj.conf  prj_lowpower.conf
samples/usp/sdk/packet_error_rate_lora/boards/: nucleo_l476rg.conf
samples/usp/sdk/packet_error_rate_lora/src/: main.c
samples/usp/sdk/ping_pong/: CMakeLists.txt  README.md  prj.conf
samples/usp/sdk/ping_pong/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/sdk/ping_pong/src/: main.c
samples/usp/sdk/ranging_demo/: CMakeLists.txt  README.md
samples/usp/sdk/ranging_demo/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nucleo_u575zi_q.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/sdk/ranging_demo/src/: app_ranging_result_output.c  app_ranging_result_output.h  main.c  oled_display.c
samples/usp/sdk/rf_certification/: CMakeLists.txt  (+1 more)
samples/usp/sdk/spectral_scan/: CMakeLists.txt  README.md  prj.conf
samples/usp/sdk/spectral_scan/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/sdk/spectral_scan/src/: main.c
samples/usp/sdk/tx_cw/: CMakeLists.txt  README.md
samples/usp/sdk/tx_cw/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
samples/usp/sdk/tx_cw/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/lbm/: Kconfig
subsys/usp/: CMakeLists.txt  Kconfig  smtc_sw_platform_helper.c  zephyr_usp_api_call.c  zephyr_usp_api_call.h  zephyr_usp_initialization.c  zephyr_usp_initialization.h  zephyr_usp_thread.c
zephyr/: module.yml
(+19 files in other folders)
